📦 Move to ESM only
- vitest instead of jest
- update dependencies (open peer deps)
- simplify and update GitHub action

Maintains `requirejs` bundles to be used in the browser.
No code changes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "target": "es6",
     // module is overridden from the build:esm/build:cjs scripts
-    "module": "es2015",
+    "module": "ESNext",
     "esModuleInterop": true,
     "noImplicitAny": true,
     "strict": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
+    "declaration": true,
     "sourceMap": true,
     // outDir is overridden from the build:esm/build:cjs scripts
     "outDir": "dist/types",
