--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,49 +9,26 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Cache packages
-        id: cache-npm
-        uses: actions/cache@v2
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-npm-
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linting
-        run: npm run lint
-
+          node-version: 18.x
+      - run: npm ci
+      - run: npm run lint
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
-
+        node-version: [16.x, 18.x]
     steps:
-      - uses: actions/checkout@v2
-      - name: Cache packages
-        id: cache-npm
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-npm-
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
       - name: Run tests and generate coverage report
-        run: npm test -- --coverage
-      # - name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v1
-      - name: Test the build
-        run: npm run build
+        run: npm run test -- --coverage
+      - run: npm run build
